# ChangeLog for dev-perl/XML-RAI
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RAI/ChangeLog,v 1.4 2006/03/30 23:43:24 agriffis Exp $

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> XML-RAI-1.301.ebuild:
  Mark 1.301 ~ia64

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org> XML-RAI-1.301.ebuild:
  Marking sparc x86 stable

  27 Nov 2005; Michael Cummings <mcummings@gentoo.org> XML-RAI-1.2.ebuild,
  +XML-RAI-1.301.ebuild:
  Version bump

*XML-RAI-1.2 (07 Feb 2005)

  07 Feb 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +XML-RAI-1.2.ebuild:
  bug 80913
