@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RAI/XML-RAI-1.2.ebuild,v 1.2 2005/11/27 02:32:12 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RAI/XML-RAI-1.2.ebuild,v 1.3 2006/06/13 21:06:15 mcummings Exp $
 
 inherit perl-module
 
@@ -13,7 +13,7 @@ SLOT="0"
 KEYWORDS="x86 sparc"
 IUSE=""
 
-SRC_TEST="do"
+#SRC_TEST="do"
 
 DEPEND=">=dev-perl/TimeDate-1.16
 		dev-perl/XML-Elemental
