@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RAI/XML-RAI-1.301.ebuild,v 1.3 2006/03/30 23:43:24 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RAI/XML-RAI-1.301.ebuild,v 1.4 2006/06/13 21:06:15 mcummings Exp $
 
 inherit perl-module
 
@@ -10,10 +10,10 @@ SRC_URI="mirror://cpan/authors/id/T/TI/TIMA/${P}.tar.gz"
 
 LICENSE="Artistic"
 SLOT="0"
-KEYWORDS="~ia64 sparc x86"
+KEYWORDS="~amd64 ~ia64 sparc x86"
 IUSE=""
 
-SRC_TEST="do"
+#SRC_TEST="do"
 
 DEPEND=">=dev-perl/TimeDate-1.16
 		dev-perl/XML-Elemental
