@@ -1,1 +1,3 @@
 MD5 fa1fe4836b00f316bdd0ef9c44e8d900 XML-RAI-1.301.tar.gz 16945
+RMD160 19ffdc2f77057dad158adad90a12e7d86c72af61 XML-RAI-1.301.tar.gz 16945
+SHA256 8a4d542952b816ac15e2c2d817e560d309cc27b003efc499f7d089c70a4d7084 XML-RAI-1.301.tar.gz 16945
