@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-RAI
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RAI/ChangeLog,v 1.4 2006/03/30 23:43:24 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RAI/ChangeLog,v 1.5 2006/06/13 21:06:15 mcummings Exp $
+
+  13 Jun 2006; Michael Cummings <mcummings@gentoo.org> XML-RAI-1.2.ebuild,
+  XML-RAI-1.301.ebuild:
+  Bug 136205, disabling tests for now.
 
   30 Mar 2006; Aron Griffis <agriffis@gentoo.org> XML-RAI-1.301.ebuild:
   Mark 1.301 ~ia64
